minor spacing fix + made divs for the actual hexagrams

--- a/style/main.css
+++ b/style/main.css
@@ -289,21 +289,21 @@ hr {
   margin-top: 50px; }
 
 .hexagram {
-  width: 10vw;
-  height: 5vw;
-  max-width: 50px;
-  max-height: 25px;
+  width: 12vw;
+  height: 6vw;
+  max-width: 60px;
+  max-height: 30px;
 }
 
 /* Individual hexagram styles */
-#hex1 { background-color: red; }
-#hex2 { background-color: orange; }
-#hex3 { background-color: yellow; }
-#hex4 { background-color: green; }
-#hex5 { background-color: blue;}
-#hex6 { background-color: indigo;}
-#hex7 { background-color: purple;}
-#hex8 { background-color: grey;}
+#hexQIAN { background-color: red; }
+#hexXUN { background-color: orange; }
+#hexKAN { background-color: yellow; }
+#hexGEN { background-color: green; }
+#hexKUN { background-color: blue;}
+#hexZHEN { background-color: indigo;}
+#hexLI { background-color: purple;}
+#hexDUI { background-color: grey;}
 
 /*
 @media screen and (max-width: 520px) {
